--- a/src/app/page1/page1.component.css
+++ b/src/app/page1/page1.component.css
@@ -1,27 +1,23 @@
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #000;
-    color: #fff;
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
+  
+  th, td {
     padding: 0.5rem;
-    height: 20px;
+    text-align: left;
+    vertical-align: middle;
+    border: 1px solid #ddd;
   }
   
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    margin-right: 1rem;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    transition: all 0.3s ease;
+  th {
+    background-color: #f2f2f2;
   }
   
-  nav a:hover {
-    color: #ffcc00;
+  tr:hover {
+    background-color: #f5f5f5;
   }
-
   .sidebar {
     background-color: #f8f9fa;
     height: 100%;
@@ -49,9 +45,4 @@ nav {
   
   .sidebar button:hover {
     background-color: #0062cc;
-  }
-
-  img {
-    height: 50px;
-    margin-left: 20px;
   }
